# hasknote

./: CHANGELOG.md  README.md  default.nix  flake.nix  hasknote.cabal  taskwarrior.nix
src/: Main.hs
